Avoid some deprecated methods/warnings (#12617)